opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_assert"
bug-reports: "https://github.com/janestreet/ppx_assert/issues"
dev-repo: "git+https://github.com/janestreet/ppx_assert.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_assert/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "ppx_cold"
  "ppx_compare"
  "ppx_here"
  "ppx_sexp_conv"
  "ppx_template"
  "dune"          {>= "3.17.0"}
  "ppxlib"        {= "0.33.0+ox"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Assert-like extension nodes that raise useful errors on failure"
description: "
Part of the Jane Street's PPX rewriters collection.
"
